# libpastry

./: .gitattributes  .gitignore  README.md  meson.build
demo/: demo.c  demo.gresource.xml  meson.build  style.css  window.blp
src/: libpastry-version-macros.h  libpastry-version.h.in  libpastry.c  libpastry.h  meson.build  pastry-animation.c  pastry-animation.h  pastry-annotation-overlay.c  pastry-annotation-overlay.h  pastry-focus-overlay.c  pastry-focus-overlay.h  pastry-glass-frame.c  pastry-glass-frame.h  pastry-glass-root.c  pastry-glass-root.h  pastry-glassed.c  pastry-glassed.h  pastry-grid-spinner.c  pastry-grid-spinner.h  pastry-property-trail.c  pastry-property-trail.h  pastry-settings.c  pastry-settings.h  pastry-sound-theme.c  pastry-sound-theme.h  pastry-spinner.c  pastry-spinner.h  pastry-theme.c  pastry-theme.h  pastry-util.c  pastry-util.h  pastry-visual-theme.c  pastry-visual-theme.h
src/sfx/: meson.build  pastry-sfx.gresources.xml
src/stylesheet/: README.md  _colors.scss  _common.scss  _drawing.scss  _main.scss  dark.scss  gtk.scss  hc-dark.scss  hc.scss  light.scss  meson.build  pastry-stylesheet.gresources.xml
subprojects/: .gitignore  bazaar.wrap
